# irisnote

./: .editorconfig  .gitignore  .signpath.json  BITNET_GUIDE.md  BUILD.md  BUILD_VARIANTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Cargo-lite.toml  Cargo.toml  DEPENDENCIES.md  GITHUB_PUBLISH.md  GITHUB_SUCCESS.md  GIT_CONFIG_COMPLETE.md  GIT_SETUP.md  LICENSE  LLM_INTEGRATION_COMPLETE.md  LLM_SETUP.md  LLM_USAGE_GUIDE.md  Makefile.toml  NOTICE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  README_CN.md  READY.md  RELEASE.md  RELEASE_SIGNPATH.md  SECURITY.md  SIGNPATH_COMPLETE.md  SIGNPATH_SETUP.md  STATISTICS.md  build-ai.bat  build-and-sign-signpath.bat  build-and-sign.bat  build-bitnet.ps1  build-standard.bat  build-standard.ps1  (+11 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  repo-metadata.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-sign.yml  ci.yml  release.yml
docs/: index.html
examples/: demo.json  demo.md  demo.py  demo.rs
src/: bitnet_service.rs  config.rs  file_association.rs  file_type.rs  llm_service.rs  main.rs  preview.rs  syntax_highlight.rs
